# UltimateModShop

./: .gitignore  LICENSE  Makefile  README.md  build.sh  debug.sh  grabber.sh  meson.build  windows.cross
.github/workflows/: c-cpp.yml  ccpp.yml  cpp.yml
inc/: menu.hpp  utils.hpp
resources/i18n/en-US/: demo.json  main.json
resources/xml/: main.xml  splash_screen.xml  test.xml
resources/xml/activity/: main.xml
resources/xml/tabs/: browse.xml  components.xml  installed.xml  settings.xml  submission_node.xml  top_bar.xml
resources/xml/tabs/browse/: browse.xml  browse_submenu.xml  browse_submenu_category.xml
resources/xml/tabs/mod_page/: download_file_selection.xml  download_file_selection_template.xml  download_handler.xml  manual_install.xml  mod_page.xml
resources/xml/views/: bar_item.xml  browse_submenu.xml  captioned_image.xml  installed_item.xml  main_window.xml  popup.xml  progress_bar.xml  submission_node.xml  top_bar.xml
scripts/: ftp_send.py
src/: bg_task.cpp  bg_task.h  components_tab.cpp  components_tab.h  curl.cpp  curl.h  curl_builder.h  gb.cpp  gb.h  installed_json.cpp  installed_json.h  installed_mods.cpp  installed_mods.h  main.cpp  main_activity.cpp  main_activity.h  menu.cpp  splash_screen.cpp  splash_screen.h  submission_node.cpp  submission_node.h  top_bar.cpp  top_bar.h  ums_pch.h  ums_utils.cpp  ums_utils.h  utils.cpp  utils.h
src/installation/: manager.cpp  manager.h
src/views/: main_window.cpp  main_window.h  popup.cpp  popup.h  progress_bar.cpp  progress_bar.h  submission_node.cpp  submission_node.h
src/views/tabs/: browse.cpp  browse.h  download_handler.cpp  download_handler.h  installed.cpp  installed.h  manual_install.cpp  manual_install.h  mod_page.cpp  mod_page.h  settings.cpp  settings.h  submission_node.cpp  submission_node.h
src/views/top_bar/: bar_item.cpp  bar_item.h  top_bar.cpp  top_bar.h
src/zip/: ZipUtil.cpp  ZipUtil.hpp  archive.hpp  physfs.hpp
src/zip/archive/: archive_extractor.cpp  archive_extractor.h
src/zip/physfs/: physfs_platforms.h
